--- a/src/customer.css
+++ b/src/customer.css
@@ -4,16 +4,28 @@
 }
 
 .car {
-    margin-left: 3em;
+    margin-bottom:3em;
     margin-top: 4em;
-    overflow: hidden
+    overflow: hidden;
+    justify-content:center;
+    
 }
 
-.p{
+.res{
+    width:100%;
+    height:auto;
+    
+}
+
+
+.des{
     margin-left: 1.5em;
 }
 
 .t{
     align-content: center;
-    margin-left: 3em;
+   
+}
+.row{
+    margin-left: 0.5em;
 }
